@@ -159,6 +159,40 @@ decl_stmt|;
 name|int
 name|i
 decl_stmt|;
+name|IndexWriter
+operator|.
+name|setDefaultWriteLockTimeout
+argument_list|(
+literal|2000
+argument_list|)
+expr_stmt|;
+name|IndexWriter
+operator|.
+name|setDefaultCommitLockTimeout
+argument_list|(
+literal|2000
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|2000
+argument_list|,
+name|IndexWriter
+operator|.
+name|getDefaultWriteLockTimeout
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|2000
+argument_list|,
+name|IndexWriter
+operator|.
+name|getDefaultCommitLockTimeout
+argument_list|()
+argument_list|)
+expr_stmt|;
 name|writer
 operator|=
 operator|new
@@ -171,6 +205,20 @@ name|WhitespaceAnalyzer
 argument_list|()
 argument_list|,
 literal|true
+argument_list|)
+expr_stmt|;
+name|IndexWriter
+operator|.
+name|setDefaultWriteLockTimeout
+argument_list|(
+literal|1000
+argument_list|)
+expr_stmt|;
+name|IndexWriter
+operator|.
+name|setDefaultCommitLockTimeout
+argument_list|(
+literal|1000
 argument_list|)
 expr_stmt|;
 comment|// add 100 documents
